# advent_of_code_2023

./: .gitignore  build_and_run_cpp.ps1  readme.md
1/: instructions.md
1/cpp/1/: main.cpp
1/cpp/2/: CMakeLists.txt  main.cpp
1/cpp_p1/: CMakeLists.txt
10/: instructions.md
10/cpp/1/: main.cpp
10/cpp/2/: main.cpp
10/cpp_p1/: file_parse.h
11/: instructions.md
11/cpp/1/: main.cpp
11/cpp/2/: main.cpp
11/cpp_p2/: main.cpp
12/: instrcutions.md
12/cpp/1/: main.cpp
12/cpp/2/: main.cpp
12/cpp_p1/: CMakeLists.txt  file_parse.h
12/cpp_p2/: main.cpp
13/: doc13.md  instructions.md
13/cpp/1/: main.cpp
13/cpp_p1/: main.cpp
14/: doc14.md  instructions.md
14/cpp/1/: main.cpp
14/cpp/2/: main.cpp
15/: doc15.md
15/cpp/1/: main.cpp
2/cpp/1/: main.cpp
2/cpp/2/: main.cpp
2/cpp_p1/: main.cpp
3/: instructions.md
3/cpp/1/: main.cpp
3/cpp/2/: main.cpp
3/cpp_p1/: main.cpp
3/cpp_p2/: main.cpp
4/: instructions.md
4/cpp/1/: main.cpp
4/cpp/2/: main.cpp
5/: instructions.md
5/cpp/1/: main.cpp
5/cpp_p1/: CMakePresets.json
5/cpp_p2/: main.cpp
6/: instructions.md
6/cpp/1/: main.cpp
6/cpp/2/: main.cpp
6/cpp_p1/: main.cpp
6/cpp_p2/: main.cpp
7/: example.txt  instructions.md
7/cpp/1/: main.cpp
7/cpp/2/: main.cpp
7/cpp_p1/: main.cpp
7/cpp_p2/: enumerate.h  file_parse.h  main.cpp
8/: instructions.md
8/cpp/1/: main.cpp
8/cpp_p1/: main.cpp
9/: instructions.md
9/cpp/1/: main.cpp
9/cpp/2/: main.cpp
aoc_2023_1/cpp_p1/: main.cpp
aoc_2023_1/cpp_p2/: main.cpp
aoc_2023_1/zig/src/: main.zig
aoc_2023_10/cpp_p1/: main.cpp
aoc_2023_10/cpp_p2/: main.cpp
aoc_2023_11/cpp_p1/: main.cpp
aoc_2023_12/cpp_p1/: main.cpp
aoc_2023_13/cpp_p1/: .clang-format  CMakeLists.txt
aoc_2023_2/: problem 2.md
aoc_2023_2/cpp_p1/: CMakeLists.txt  example.txt  file_parse.h  main.cpp
aoc_2023_2/cpp_p2/: main.cpp
aoc_2023_3/cpp_p1/: CMakeLists.txt  main.cpp
aoc_2023_3/cpp_p2/: file_parse.h
aoc_2023_4/cpp_p1/: main.cpp
aoc_2023_4/cpp_p2/: main.cpp
aoc_2023_5/cpp_p1/: main.cpp
aoc_2023_5/cpp_p2/: file_parse.h
aoc_2023_9/cpp_p1/: main.cpp
aoc_2023_9/cpp_p2/: main.cpp
common/cpp/: CMakeLists.txt  CMakePresets.json  file_parse.h
